fixed people overflow

--- a/css/people.css
+++ b/css/people.css
@@ -76,7 +76,7 @@
 
 .bio-container {
 	position: fixed;
-	top: 35%;
+	bottom: 10%;
 	right: 10%;
 	width: 43%;
 	border-left: 3px solid black;
@@ -106,9 +106,14 @@
 	transition: all 0.5s ease-in-out;
 }
 .current-headshot-container {
-	height: 200px;
-	width: 200px;
+	float: right;
+	height: 150px;
+	width: 150px;
 	overflow: hidden;
+
+	/*border-top: 3px solid black;*/
+	border-right: 3px solid black;
+	border-bottom: none;
 }
 
 .current-headshot-container img {
@@ -118,9 +123,10 @@
 
 .current-name, .current-roles{
 
-	float: right;
+	float: left;
 	width: 50%;
 	margin-left: auto;
+	font-size: 1.3em;
 
 	text-align: right;
 }
@@ -135,7 +141,7 @@
 }
 
 .current-courses {
-
+	font-style: italic;
 }
 
 .current-descriptions {
@@ -149,6 +155,10 @@
 .current-email {
 	float: right;
 }
+
+/*@media (max-height: 1000px) and (orientation: landscape){
+
+}*/
 
 @media (max-width: 500px) and (orientation: portrait){
 
